--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
   height: 100%;
   background-color: black;
   font-family: "Inter";
+  z-index: -3;
 }
 
 h1,
@@ -32,8 +33,16 @@ h2 {
   justify-content: center;
   flex-flow: column nowrap;
   background-color: darkgrey;
+  z-index: 2;
 }
 
+.container img {
+  opacity: 60%;
+  position: absolute;
+  z-index: -1;
+  top: 20rem;
+  width: 20rem;
+}
 .top {
   width: 100%;
   height: 20vh;
@@ -49,7 +58,6 @@ p input {
   padding-left: 10px;
   border-radius: 5px;
   border: none;
-  /* transition: all 0.3s ease; */
 }
 .top p input:hover {
   box-shadow: 2px 2px 2px #e08700;
@@ -57,6 +65,7 @@ p input {
 
 .top p input:focus {
   outline: none;
+  box-shadow: 2px 2px 2px #e08700;
 }
 
 .mid {
@@ -83,14 +92,16 @@ p input {
   text-align: center;
   font-weight: bold;
   border-radius: 5px;
-  color: #e08700;
-  background-color: black;
+
   cursor: pointer;
 }
 .botoes button:hover {
   scale: 1.1;
-
   box-shadow: 2px 2px 2px #e08700;
+}
+
+.botoes button .mais {
+  color: red;
 }
 .bottom {
   display: flex;
